...
                          const Divider(height: 32),
                          const Padding(
                            padding: EdgeInsets.only(left: 4),
                            child: Text('Menu', style: TextStyle(fontSize: 16)),
                          ),

                          _drawerItem(context, Icons.dashboard, 'Dashboard', SalesDashboardScreen()),
                          _drawerItem(context, Icons.timer_off, 'Punch Out', PunchOut()),

                          // _drawerItem(context, Icons.qr_code, 'View Meeting QR', const MeetingQrScreen()),
                          if (canView(FeatureAccess.meeting))
                            ListTile(
                              leading: const Icon(Icons.qr_code),
...
                          const Divider(height: 32),
                          const Padding(
                            padding: EdgeInsets.only(left: 4),
                            child: Text('Account', style: TextStyle(fontSize: 16)),
                          ),

                          _drawerItem(context, Icons.person_outline, 'Profile', const ProfileScreen()),
                          ListTile(
                            leading: const Icon(Icons.logout, color: Colors.black),
                            title: const Text('Logout'),
                            onTap: () => _handleLogout(context),
                          ),

...
